--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ footer .logo {
   line-height: 1.1; /* 16 */
   text-transform: uppercase;
   margin-bottom: 10px;
+  text-align: left;
 }
 
 .feature-list p {
