--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .conteiner {
-  outline: 2px solid tomato;
+  /* outline: 2px solid tomato; */
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
@@ -173,11 +173,7 @@ footer .logo {
 .conteiner .section {
   padding-top: 94px;
 }
-.feature-cont {
-  outline: 2px solid tomato;
 
-  padding-top: 94px;
-}
 .feature-list {
   display: flex;
   flex-wrap: wrap;
@@ -185,7 +181,7 @@ footer .logo {
 }
 
 .feature-list .item {
-  outline: 2px solid tomato;
+  /* outline: 2px solid tomato; */
   width: 270px;
 }
 
@@ -210,7 +206,7 @@ footer .logo {
   font-size: 36px;
   line-height: 1.2; /* 42 */
   text-align: center;
-  padding-top: 94px;
+  /* padding-top: 94px; */
   margin-bottom: 50px;
 }
 
@@ -224,9 +220,12 @@ footer .logo {
 
 /* Команда-comand */
 
+.conteiner.comand {
+  padding-top: 94px;
+}
+
 .card-team {
   width: 270px;
-  /* height: 368px; */
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
