--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,8 @@ footer .logo {
 }
 
 /* Особенности-features */
-.conteiner .section {
+
+.features-section .conteiner {
   padding-top: 94px;
 }
 
@@ -199,6 +200,9 @@ footer .logo {
 }
 
 /* Чем мы занимаемся-section */
+.section.engage {
+  padding-top: 94px;
+}
 
 .section-title {
   color: var(--title-text-color);
@@ -206,7 +210,6 @@ footer .logo {
   font-size: 36px;
   line-height: 1.2; /* 42 */
   text-align: center;
-  /* padding-top: 94px; */
   margin-bottom: 50px;
 }
 
