--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,12 @@
 
 /* utility */
 
+img {
+  display: block;
+  min-width: 100%;
+  height: auto;
+}
+
 .list,
 p,
 h2 {
@@ -125,9 +131,6 @@ footer .logo {
 
 .hero .conteiner {
   flex-direction: column;
-  /* margin: auto; */
-  /* text-align: center; */
-  /* align-items: center; */
 }
 
 .hero-title {
@@ -229,7 +232,6 @@ footer .logo {
   display: flex;
   justify-content: center;
   text-align: center;
-  /* flex-wrap: wrap; */
 }
 
 .comand-list .card-team + .card-team {
@@ -254,6 +256,10 @@ footer .logo {
 }
 
 /* porfolio.html */
+
+.page-header {
+  border-bottom: 1px solid #ececec;
+}
 
 .conteiner.portfolio {
   margin-top: 94px;
@@ -287,25 +293,28 @@ footer .logo {
 .flex-button button:focus {
   color: var(--hero-color);
   background-color: var(--accent-color);
-  /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12); */
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* примеры-examples */
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  /* margin: -15px; */
+}
+.card-content {
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .flex-card {
-  /* width: 370px; */
-  /* margin: 15px; */
-  background: #ffffff;
-  border: 1px solid #eeeeee;
   box-sizing: border-box;
   margin-right: 30px;
-  /* margin-bottom: 30px; */
   width: calc((100% - 60px) / 3);
 }
 
@@ -329,16 +338,11 @@ footer .logo {
   font-size: 18px;
   line-height: 2; /* 36 */
   letter-spacing: 0.06em;
-  padding-top: 20px;
-  padding-left: 24px;
-  padding-right: 24px;
-  /* margin-bottom: 4px; */
 }
 
 .examples p {
   font-size: 16px;
   line-height: 1.9; /* 30 */
-  padding: 4px 24px 20px;
 }
 
 /* footer */
