--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ footer .logo {
 
 .hero-title {
   /* outline: 2px solid tomato; */
-  display: inline-block;
+  /* display: inline-block; */
   width: 696px;
   margin-top: 0;
   margin-bottom: 30px;
