--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ footer .logo {
 
 /* porfolio.html */
 
-.page-header {
+.page-header.portfolio {
   border-bottom: 1px solid #ececec;
 }
 
@@ -349,24 +349,29 @@ footer .logo {
   padding-bottom: 60px;
 }
 .footer .conteiner .logo {
-  padding-top: 0;
-  padding-bottom: 20px;
+  padding: 0;
+  margin-bottom: 20px;
 }
 
 .logo-color {
   color: var(--hero-color);
 }
-address {
-  font-style: normal;
-}
 
 .contact-list {
-  color: var(--hero-color);
   font-size: 14px;
   line-height: 1.7; /* 24 */
+  font-style: normal;
+}
+.contact-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
-.contact-item {
-  padding-top: 9px;
+.footer-address {
+  color: var(--hero-color);
+}
+
+.contact-item .link {
+  /* padding-top: 9px; */
   color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
 }
